--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+
+// https://jgthms.com/minireset.css/
+@import url("https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css");
+
+@import url(https://fonts.googleapis.com/css?family=Inter:100,200,300,regular,500,600,700,800,900);
+
+html {
+  font-family: 'Inter', san-serif;
+}
+
+html, body {
+  height: 100%;
+}
+
+h1 {
+  font-size:48px;
+}
+
+h2 {
+  font-size: 40px;
+}
