--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,11 +3,17 @@
   flex-direction: column;
 
   height: 100%;
-  background-color: #e1e2ed;
+  // background-color: #e1e2ed;
+  // background-image: url(https://images.unsplash.com/photo-1643316037362-e81fc45e6357?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=1080&ixid=MnwxfDB8MXxyYW5kb218MHx8fHx8fHx8MTY0NTMxODUzNQ&ixlib=rb-1.2.1&q=80&w=1920);
+  background-image: url(https://images.unsplash.com/photo-1644956196704-3e5164ca9a76?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=1080&ixid=MnwxfDB8MXxyYW5kb218MHx8fHx8fHx8MTY0NTMxODkwNQ&ixlib=rb-1.2.1&q=80&w=1920);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 .top-section {
-  background-color: aquamarine;
+  // background-color: aquamarine;
   text-align: center;
 
   padding: 100px 0px;
@@ -27,10 +33,15 @@
 }
 
 .content-section {
-  background-color: cadetblue;
+  // background-color: cadetblue;
   flex-grow: 1;
 }
 
 .bottom-section {
-  background-color: coral;
+  // background-color: coral;
+  display: flex;
+
+  app-tabs {
+    margin: auto; // center
+  }
 }
