--- a/src/app/tabs/tabs.component.html
+++ b/src/app/tabs/tabs.component.html
@@ -1,9 +1,9 @@
 <div class="tabs">
-  <div class="tab bookmarks-tab">
+  <a [routerLink]="'bookmarks'" class="tab bookmarks-tab">
     <div class="tab-tile">
       <i class="material-icons-outlined">bookmarks</i>
     </div>
-  </div>
+  </a>
 
   <div class="tab todos-tab">
     <div class="tab-tile">
