--- a/src/app/tabs/tabs.component.scss
+++ b/src/app/tabs/tabs.component.scss
@@ -16,6 +16,8 @@
 .tab {
   position: relative;
 
+  text-decoration: none;
+
   z-index: 1;
 }
 
@@ -25,10 +27,21 @@
 
   cursor: pointer;
 
+  transition: all 0.2s ease-out;
+
   i {
     color: #222;
   }
 }
+
+.tab.selected .tab-tile {
+  transform: translateY(-50%);
+
+  transition-duration: 0.4s;
+  transition-timing-function: cubic-bezier(0, 0, 0, 2);
+}
+
+// styles for the tab tile background shape
 
 .tab-tile::before {
   content: "";
@@ -65,4 +78,50 @@
 .tab-tile:hover::before {
   opacity: 1;
   transform: scale(1.1);
+}
+
+.tab.selected .tab-tile::before {
+  opacity: 1;
+  transform: scale(1.1);
+  border-radius: 50%;
+
+  box-shadow: 0px 7px 17px rgba(black, 0.12);
+  transition-delay: 0.2s;
+}
+
+// end of tab tile background shape styles
+
+// styles for the underline effect
+
+.tab::after {
+  content: "";
+  position: absolute;
+  bottom: -10px;
+  left: 0;
+  right: 0;
+
+  height: 3px;
+  width: 50%;
+
+  margin: auto;
+
+  background-color: rgba(white, 0.85);
+
+  border-radius: 2px;
+
+  transition: all 0.2s;
+
+  // hide by default
+  opacity: 0;
+  transform: scaleX(0);
+}
+
+.tab.selected::after {
+  opacity: 1;
+  transform: scaleX(1.1);
+  transition-delay: 0.2s;
+}
+
+.tab.selected {
+  outline: none;
 }
