Create Add Note UI

--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -9,74 +9,12 @@
         <div class="note-card-title">Note Title</div>
         <div class="note-card-content">Note Content</div>
       </div>
-      <div class="note-card">
-        <div class="note-card-title">Note Title</div>
-        <div class="note-card-content">Note Content</div>
-      </div>
-      <div class="note-card">
-        <div class="note-card-title">Note Title</div>
-        <div class="note-card-content">Note Content</div>
-      </div>
-      <div class="note-card">
-        <div class="note-card-title">Note Title</div>
-        <div class="note-card-content">Note Content</div>
-      </div>
-      <div class="note-card">
-        <div class="note-card-title">Note Title</div>
-        <div class="note-card-content">Note Content</div>
-      </div>
-      <div class="note-card">
-        <div class="note-card-title">Note Title</div>
-        <div class="note-card-content">Note Content</div>
-      </div>
-      <div class="note-card">
-        <div class="note-card-title">Note Title</div>
-        <div class="note-card-content">Note Content</div>
-      </div>
-      <div class="note-card">
-        <div class="note-card-title">Note Title</div>
-        <div class="note-card-content">Note Content</div>
-      </div>
-      <div class="note-card">
-        <div class="note-card-title">Note Title</div>
-        <div class="note-card-content">Note Content</div>
-      </div>
-      <div class="note-card">
-        <div class="note-card-title">Note Title</div>
-        <div class="note-card-content">Note Content</div>
-      </div>
-      <div class="note-card">
-        <div class="note-card-title">Note Title</div>
-        <div class="note-card-content">Note Content</div>
-      </div>
-      <div class="note-card">
-        <div class="note-card-title">Note Title</div>
-        <div class="note-card-content">Note Content</div>
-      </div>
-      <div class="note-card">
-        <div class="note-card-title">Note Title</div>
-        <div class="note-card-content">Note Content</div>
-      </div>
-      <div class="note-card">
-        <div class="note-card-title">Note Title</div>
-        <div class="note-card-content">Note Content</div>
-      </div>
-      <div class="note-card">
-        <div class="note-card-title">Note Title</div>
-        <div class="note-card-content">Note Content</div>
-      </div>
-      <div class="note-card">
-        <div class="note-card-title">Note Title</div>
-        <div class="note-card-content">Note Content</div>
-      </div>
-      <div class="note-card">
-        <div class="note-card-title">Note Title</div>
-        <div class="note-card-content">Note Content</div>
-      </div>
-      <div class="note-card">
-        <div class="note-card-title">Note Title</div>
-        <div class="note-card-content">Note Content</div>
-      </div>
+    </div>
+    <div class="btns-container btns-centered">
+      <a routerLink="add" class="btn add-btn">
+        <i class="material-icons-outlined">add</i>
+        Add</a
+      >
     </div>
   </div>
 </div>
