--- a/src/app/notes/notes.component.scss
+++ b/src/app/notes/notes.component.scss
@@ -17,6 +17,7 @@
 
   padding: 25px;
   border-radius: 4px;
+  width: 100%;
 
   cursor: pointer;
 
@@ -35,4 +36,9 @@
 
 .note-card-content {
   margin-top: 7px;
+}
+
+.add-btn i {
+  margin-right: 5px;
+  margin-left: -3px;
 }
