--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -1,20 +1,14 @@
 <div class="notes-wrapper">
   <div class="container">
     <div class="notes-list">
-      <div class="note-card">
-        <div class="note-card-title">Note Title</div>
-        <div class="note-card-content">Note Content</div>
+      <app-note-card *ngFor="let note of notes" [note]="note"></app-note-card>
+
+      <div class="btns-container btns-centered">
+        <a routerLink="add" class="btn add-btn">
+          <i class="material-icons-outlined">add</i>
+          Add</a
+        >
       </div>
-      <div class="note-card">
-        <div class="note-card-title">Note Title</div>
-        <div class="note-card-content">Note Content</div>
-      </div>
-    </div>
-    <div class="btns-container btns-centered">
-      <a routerLink="add" class="btn add-btn">
-        <i class="material-icons-outlined">add</i>
-        Add</a
-      >
     </div>
   </div>
 </div>
