--- a/src/app/notes/notes.component.scss
+++ b/src/app/notes/notes.component.scss
@@ -5,40 +5,15 @@
 
 .notes-list {
   display: flex;
-  flex-direction: column; // default
-  align-items: center;
-
-  gap: 15px;
-}
-
-.note-card {
-  background-color: rgba(black, 0.5);
-  color: rgba(white, 0.95);
-
-  padding: 25px;
-  border-radius: 4px;
-  width: 100%;
-
-  cursor: pointer;
-
-  transition: all 0.1s;
-
-  &:hover {
-    background-color: rgba(black, 0.68);
-    backdrop-filter: blur(2px);
-  }
-}
-
-.note-card-title {
-  font-weight: 600;
-  font-size: 20px;
-}
-
-.note-card-content {
-  margin-top: 7px;
+  flex-direction: column;
 }
 
 .add-btn i {
   margin-right: 5px;
   margin-left: -3px;
+}
+
+app-note-card {
+  display: block;
+  margin-bottom: 15px;
 }
