--- a/src/app/add-notes/add-notes.component.html
+++ b/src/app/add-notes/add-notes.component.html
@@ -1,13 +1,24 @@
 <div class="add-note-wrapper has-blurred-white-bg container">
   <h2 class="is-bold">New Note</h2>
 
-  <form>
-    <input class="textbox" type="text" placeholder="Enter note title..." />
-    <textarea class="textarea" placeholder="Enter note content..."></textarea>
+  <form #form="ngForm" (ngSubmit)="onFormSubmit(form)">
+    <input
+      ngModel
+      name="title"
+      class="textbox"
+      type="text"
+      placeholder="Enter note title..."
+    />
+    <textarea
+      ngModel
+      name="content"
+      class="textarea"
+      placeholder="Enter note content..."
+    ></textarea>
 
     <div class="btns-container align-end">
       <a routerLink="../" class="btn">Cancel</a>
-      <button class="btn align-end">Create Note</button>
+      <button type="submit" class="btn align-end">Create Note</button>
     </div>
   </form>
 </div>
