--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -1,7 +1,9 @@
 <div class="notes-wrapper">
   <div class="container">
     <div class="notes-list">
-      <app-note-card *ngFor="let note of notes" [note]="note"></app-note-card>
+      <a *ngFor="let note of notes" [routerLink]="[note.id]">
+        <app-note-card [note]="note"></app-note-card>
+      </a>
 
       <div class="btns-container btns-centered">
         <a routerLink="add" class="btn add-btn">
