--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,6 +32,10 @@ h2.is-bold {
   letter-spacing: -2px;
 }
 
+a {
+  text-decoration: none;
+}
+
 .container {
   max-width: 850px;
   margin: auto;
@@ -68,7 +72,10 @@ h2.is-bold {
 
 .btns-container {
   display: flex;
+  flex-direction: row; // default
   margin-top: 20px;
+
+  gap: 12px;
 
   &.btns-centered {
     justify-content: center;
