Add action buttons to Delete and Edit

--- a/src/app/todo-item/todo-item.component.html
+++ b/src/app/todo-item/todo-item.component.html
@@ -2,7 +2,14 @@
   <div class="check-box">
     <i class="material-icons-outlined">check</i>
   </div>
-  <p class="todo-text">
-    {{ todo.text }}
-  </p>
+  <p class="todo-text">{{ todo.id }} {{ todo.text }}</p>
+
+  <div class="todo-item-actions" (click)="$event.stopPropagation()">
+    <div (click)="onEdit()" class="btn todo-item-action-btn">
+      <i class="material-icons-outlined">edit</i>
+    </div>
+    <div (click)="onDelete()" class="btn todo-item-action-btn">
+      <i class="material-icons">delete</i>
+    </div>
+  </div>
 </div>
