--- a/src/app/todo-item/todo-item.component.scss
+++ b/src/app/todo-item/todo-item.component.scss
@@ -1,4 +1,5 @@
 .todo-item {
+  position: relative;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -60,5 +61,60 @@
 
 .todo-text,
 .check-box {
-  transition: 0.12s;
+  transition: all 0.12s;
+}
+
+.todo-item-actions {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+
+  background-color: rgba(72, 72, 82, 0.85);
+  backdrop-filter: blur(2px);
+
+  box-shadow: 0px 4px 12px rgba(black, 0.2);
+  border-radius: 20px;
+
+  transition: all 0.2s;
+
+  // hide delete and edit by default
+  visibility: hidden;
+  opacity: 0;
+  transform: scale(0.8);
+}
+
+.todo-item-action-btn {
+  background: transparent;
+
+  padding: 10px;
+
+  border-radius: inherit;
+
+  &:first-child {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    padding-left: 14px;
+  }
+
+  &:last-child {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    padding-right: 14px;
+  }
+
+  &:hover {
+    background: rgba(50, 50, 53, 1);
+  }
+}
+
+.todo-item-action-btn i {
+  font-size: 20px;
+}
+
+.todo-item:hover .todo-item-actions {
+  visibility: visible;
+  opacity: 1;
+  transform: scale(1);
+
+  transition-delay: 0.25s;
 }
