--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@
 
 @import url(https://fonts.googleapis.com/css?family=Inter:100,200,300,regular,500,600,700,800,900);
 
-@import url(https://fonts.googleapis.com/css?family=Material+Icons+Outlined);
+@import url(https://fonts.googleapis.com/css?family=Material+Icons+Outlined|Material+Icons);
 
 html {
   font-family: "Inter", san-serif;
