--- a/src/app/bookmark-tile/bookmark-tile.component.scss
+++ b/src/app/bookmark-tile/bookmark-tile.component.scss
@@ -45,3 +45,11 @@
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+
+.tile-icon {
+  display: flex;
+  justify-content: flex;
+  align-items: center;
+  height: 32px;
+  width: 32px;
+}
