Create add bookmark view

--- a/src/app/bookmark-tile/bookmark-tile.component.scss
+++ b/src/app/bookmark-tile/bookmark-tile.component.scss
@@ -48,7 +48,7 @@
 
 .tile-icon {
   display: flex;
-  justify-content: flex;
+  justify-content: center;
   align-items: center;
   height: 32px;
   width: 32px;
